V1_create_device_info_table.sql