@@ -1,0 +1,1 @@
+CREATE TABLE cases (guid VARCHAR(50), name VARCHAR(70), phone VARCHAR(20), age TINYINT, gender VARCHAR(12), dialect VARCHAR(20), reasons VARCHAR(250), notes VARCHAR(1000), sick TINYINT);
